@@ -12,6 +12,20 @@ ext {
     formatScripts = "${universePath}/scripts/.run-google-java-format"
 
     isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
+
+    // Keep in sync with checker-framework/build.gradle.
+    // TODO: find a way to directly use that variable.
+    compilerArgsForRunningCF = [
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    ]
 }
 
 println '==================================='
@@ -105,8 +119,10 @@ afterEvaluate {
         environment "external_checker_classpath", "${universePath}/build/classes/java/main:${universePath}/build/libs/universe.jar"
 
 
-        if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+        if (isJava8) {
             jvmArgs "-Xbootclasspath/p:${cfiPath}/dist/javac.jar"
+        } else {
+            jvmArgs += compilerArgsForRunningCF
         }
 
         testLogging {
